syntax = "proto3";

package bazil.control;

import "bazil.org/bazil/control/wire/volume.proto";

option go_package = "wire";

service Control {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc VolumeCreate(VolumeCreateRequest) returns (VolumeCreateResponse) {}
  rpc VolumeMount(VolumeMountRequest) returns (VolumeMountResponse) {}
}

message PingRequest {
}

message PingResponse {
}
