package bazil.control;

option go_package = "wire";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;

message VolumeMountRequest {
  required string volumeName = 1 [(gogoproto.nullable) = false];
  required string mountpoint = 2 [(gogoproto.nullable) = false];
}

message VolumeCreateRequest {
  required string volumeName = 1 [(gogoproto.nullable) = false];
}
